[package]
name = "rutcl"
version = "0.1.6"
edition = "2021"
description = "Chilean National ID (RUT) Parser"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
repository = "https://github.com/EstebanBorai/rutcl"
categories = ["web-programming"]
homepage = "https://github.com/EstebanBorai/rutcl"
keywords = ["rutcl", "chile", "national", "nid", "parser"]
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rutcl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197" }
thiserror = "1.0.56"

[dev-dependencies]
csv = "1.3.0"
serde_test = "1.0.176"

# [features]
# serde = ["dep:serde"]
