[package]
name = "rutcl"
version = "1.0.1"
edition = "2021"
description = "Chilean National ID (RUT) Parser"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
repository = "https://github.com/EstebanBorai/rutcl"
categories = ["web-programming"]
homepage = "https://github.com/EstebanBorai/rutcl"
keywords = ["rutcl", "chile", "national", "nid", "parser"]
license = "MIT"
readme = "../../README.md"

[lib]
name = "rutcl"

[features]
serde = ["dep:serde"]
rand = ["dep:rand"]

[dependencies]
thiserror = "1.0.56"

# Optional Dependencies
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.197", optional = true }

[dev-dependencies]
csv = "1.3.0"
serde_test = "1.0.176"
