[workspace]
members = [
    "io/deserialize-rut_is_valid",
    "io/serialize-rut_is_valid",
    "rut_is_valid",
    "io/deserialize-rut_format_sans",
    "io/serialize-rut_format_sans",
    "rut_format_sans",
    "io/deserialize-rut_format_dash",
    "io/serialize-rut_format_dash",
    "rut_format_dash",
    "io/deserialize-rut_format_dots",
    "io/serialize-rut_format_dots",
    "rut_format_dots",
]

resolver = "2"



[workspace.dependencies]
## GENERATED WORKSPACE DEPENDENCIES
anyhow = "1.0"
bson = "2.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simd-json = "0.13.9"
wit-bindgen = { version = "0.30.0", default-features = false }
sdrg = { version = "0.5.0", package = "sdf-row-guest" }
sdfg = { version = "0.5.0", package = "sdf-df-guest" }
sdf-macros = "0.5.2-alpha1"
## END OF GENERATED WORKSPACE DEPENDENCIES

[profile.wasm-debug]
inherits = "dev"
overflow-checks = false
strip = true
panic = "abort"

[profile.wasm-release]
inherits = "release"
overflow-checks = false
strip = true
opt-level = 'z'
codegen-units = 1
panic = "abort"

[profile.wasm-optimized]
inherits = "release"
overflow-checks = false
strip = true
opt-level = 3
codegen-units = 1
panic = "abort"